--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,8 +20,8 @@ variables:
   FRONTEND_NAME: frontend
 
   # 后端和前端目录
-  BACKEND_DIR: ./backend
-  FRONTEND_DIR: ./frontend
+  BACKEND_DIR: backend
+  FRONTEND_DIR: frontend
 
 # 定义阶段
 stages:
