--- a/argo-cd/chart-app.yaml
+++ b/argo-cd/chart-app.yaml
@@ -15,7 +15,7 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: todo-fullstack-gitops
+    namespace: todo
   syncPolicy:
     automated:
       selfHeal: true
